#! /usr/bin/env bash
#########################################################################
#									#
# Script ID: libmgec-lib/source/progs/c/inc-tmp/Makefile.am		#
# Author: Copyright (C) 2015-2017  Mark Grant				#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0					#
#									#
# Purpose:								#
#	AutoMake script file to produce temporary headers.		#
#									#
# For example. Temporary headers can be used in development by a 	#
# library package to house, modify and use copies of an include file	#
# which is normally part of a -dev package. At the end of development	#
# this, of course, has to be moved back to the -dev package and		#
# released from there.							#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 25/03/2017	MG	1.0.1	First release.				#
# 10/12/2017	MG	1.0.2	Add SPDX license tags to source files.	#
#									#
#########################################################################


noinst_HEADERS = $(tmpheaders)

EXTRA_HEADERS = 
