#! /usr/bin/env bash
#########################################################################
#									#
# Script ID: libmgec-lib/source/progs/c/lib-tmp/Makefile.am		#
# Author: Copyright (C) 2015-2017  Mark Grant				#
#									#
# Released under the GPLv3 only.					#
# SPDX-License-Identifier: GPL-3.0					#
#									#
# Purpose:								#
#	AutoMake script file to provide AutoTools support for temporary	#
# libraries.								#
#									#
#########################################################################

#########################################################################
#									#
# Changelog								#
#									#
# Date		Author	Version	Description				#
#									#
# 09/06/2017	MG	1.0.0	First release.				#
# 10/12/2017	MG	1.0.1	Add SPDX license tags to source files.	#
#									#
#########################################################################


EXTRA_DIST = $(srcdir)/.
